add alarm related work

--- a/app/dashboard/views/layout.jade
+++ b/app/dashboard/views/layout.jade
@@ -69,8 +69,8 @@ html
 								span.arrow
 							ul.sub-menu
 								li
-									a 已定义告警
-									a 告警触发记录
+									a(href="/dashboard/alarm_rule") 已定义告警
+									a(href="/dashboard/alarm_history") 告警触发记录
 						li
 							a(href="javascript:;")
 								i.icon-cog
