暑期前提交

--- a/app/dashboard/views/host_static.jade
+++ b/app/dashboard/views/host_static.jade
@@ -75,4 +75,7 @@ block content
 								li  
 									span.host_item   eth1:
 									small #{host.eth1}
+
+block body_static
+	script(type="text/javascript", src="/dashboard/js/host_static.js")
 						
